# job-search-assistant

./: .gitignore  README.md  config.yaml  import_html.bat  pyproject.toml  requirements-build.txt  requirements.txt  start.bat  start_service.bat
.github/workflows/: test.yml
docs/: development.md  extension-manual-test.md  frontend.md  packaging.md  product-loop.md  user-guide.md  ux-review.md
docs/superpowers/plans/: 2026-05-11-boss-job-assistant.md  2026-05-12-boss-extension-assistant.md  2026-05-13-vue-element-plus-admin.md
docs/superpowers/specs/: 2026-05-11-boss-job-assistant-design.md  2026-05-12-boss-extension-assistant-design.md
extension/: content.js  manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js  router.js  styles.css
frontend/src/components/: InterviewForm.vue  InterviewList.vue
frontend/src/views/: DashboardPage.vue  JobDetailPage.vue  (+5 more)
installer/inno/: job-search-assistant.iss
scripts/: clean_workspace.bat  package_windows.bat
src/boss_job_assistant/: __init__.py  boss_job_assistant.py  boss_parser.py  config.py  desktop_launcher.py  exporter.py  html_parser.py  import_saved_html.py  local_service.py  models.py  scorer.py  skills.py  storage.py
tests/: test_boss_job_assistant.py  test_boss_parser.py  test_config.py  test_desktop_launcher.py  test_exporter.py  test_html_parser.py  test_import_saved_html.py  test_local_service.py  test_scorer.py  test_skills.py  test_storage.py
tests/extension/: content_parser_test.js  popup_static_test.js
