[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boss-job-assistant"
version = "0.1.0"
description = "Local semi-automated Boss job assistant."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44.0",
    "PyYAML>=6.0.1",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
