[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-assistant"
version = "0.1.0"
description = "Local personal job search assistant."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
